4 ways to gather data from devices

--- a/example-8/app/templates/devices/view_device.html
+++ b/example-8/app/templates/devices/view_device.html
@@ -67,7 +67,9 @@
             <ul class="nested">
           {% for entry in folder_structure %}
             {% if entry["type"] == "folder" %}
+              {% if entry["children"] %}
               <li><i class="fas fa-angle-right rotate"></i>
+              {% endif %}
                 <span><i class="far fa-calendar-alt ic-w mx-1"></i>{{ entry["name"] }}</span>
                 {% if entry["children"] %}
                   <ul class="nested">
